feat: RGB colors via new `Command` type (#70)
New `Command` type, which is essentially the base executable

---------
